deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gateway  # <-- Corrected selector label
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: zakaria469980/gatewaynewww:latest
        ports:
        - containerPort: 80
  
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway  # <-- Corrected selector label
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
